added a /login POST request to TestLogin, with placeholder URL and port number

--- a/Frontend/TestSite/TestLogin/index.html
+++ b/Frontend/TestSite/TestLogin/index.html
@@ -11,7 +11,7 @@
   <div class="login-card">
     <h1>Welcome back ✨</h1>
 
-    <form action="/login" method="POST">
+    <form id="login-form">
       <div class="field">
         <label for="username">Username</label>
         <input id="username" name="username" type="text" placeholder="Enter username" required />
